erDiagram

    dim_customer ||--o{ fact_orders : places

    fact_orders ||--o{ fact_order_items : contains
    fact_orders ||--o{ fact_payments : has
    fact_orders ||--o{ fact_reviews : receives

    dim_product ||--o{ fact_order_items : includes
    dim_seller ||--o{ fact_order_items : fulfills


    dim_customer {
        string customer_unique_id PK
        int customer_zip_code_prefix
        string customer_city
        string customer_state
    }


    fact_orders {
        string order_id PK
        string customer_unique_id FK
        string order_status
        datetime order_purchase_timestamp
        datetime order_approved_at
        datetime order_delivered_carrier_date
        datetime order_delivered_customer_date
        datetime order_estimated_delivery_date
        boolean has_timeline_anomaly
    }


    fact_order_items {
        string order_id PK, FK
        int order_item_id PK
        string product_id FK
        string seller_id FK
        datetime shipping_limit_date
        decimal price
        decimal freight_value
    }


    fact_payments {
        string order_id PK, FK
        int payment_sequential PK
        string payment_type
        int payment_installments
        decimal payment_value
        boolean has_installments_anomaly
    }


    fact_reviews {
        string review_id PK
        string order_id PK, FK
        int review_score
        string review_comment_title
        string review_comment_message
        datetime review_creation_date
        datetime review_answer_timestamp
    }


    dim_product {
        string product_id PK
        string product_category_name
        string product_category_name_english
        int product_name_length
        int product_description_length
        int product_photos_qty
        int product_weight_g
        int product_length_cm
        int product_height_cm
        int product_width_cm
    }


    dim_seller {
        string seller_id PK
        int seller_zip_code_prefix
        string seller_city
        string seller_state
    }